--- a/report/report.latex
+++ b/report/report.latex
@@ -1,4 +1,5 @@
 \documentclass[a4paper,12pt]{article}
+
 \usepackage{multicol}
 \usepackage{graphicx}
 \usepackage{minitoc}
@@ -201,37 +202,48 @@ After the validation we get a list of 49 medication names which are:
 \section{Exercise 4}
 
 The main purpose of this exercise is to obtain a list with the greatest number
-of comorbidity factors with respect to alcoholism.
+of comorbidity factors with respect to suicidal ideation and self-injuring
+behaviors.
 
 \subsection{Retrieving the Reddit results}
 
 As we cannot use any expert knowledge as a starting point, we have decided to
-begin using a multi match query about \textbf{"problem with alcohol"} by
-searching the fields selftext, subreddit and title. We take the 10 most relevant
+begin using a multi match query about \textbf{"kill myself"} by
+searching the fields selftext, subreddit and title. We take the 15 most relevant
 subreddits from this query which are:
 \begin{multicols}{3}
 \begin{itemize}
-    \item stopdrinking
-    \item AlAnon
-    \item addiction
-    \item alcoholism
+    \item SuicidalWatch
     \item depression
-    \item Anxiety
-    \item BipolarReddit
-    \item SuicideWatch
-    \item alcoholicsanonymous
     \item offmychest
+    \item Advice
+    \item NoFap
+    \item stopdrinking
+    \item BPD
+    \item mentalhealth
+    \item Anxiety
+    \item AskDocs
+    \item ADHD
+    \item schizophrenia
+    \item leaves
+    \item OCD
+    \item stopsmoking
 \end{itemize}
 \end{multicols}
 
 \subsection{Publish or Perish}
 
-In order to obtain reliable data on the true comorbities of alcoholism,
+The exercise is formed by two python scripts called \textbf{Exercise4ES.py} and
+\textbf{Exercise4ES-PoP.py}. In order to get the results the second one must be
+executed first. The first script computes the final results.
+
+In order to obtain reliable data on the true comorbities of suicidal ideation
+and self-injuring behaviors,
 \textbf{Publish or Perish} tool has been used. It allows us to obtain the main
 scientific papers that deal with this topic and are available in Google
-academics. Any document that mentions comorbidities of alcoholism seems relevant
+academics. Any document that mentions comorbidities of these topics" seems relevant
 to our propouses. After indexing the documents, we export them in a JSON file
-called \textbf{PoPAlcoholismComorbidity.json} that will be treated later as
+called \textbf{pop.json} that will be treated later as
 follows:
 
 \begin{enumerate}
@@ -239,13 +251,61 @@ follows:
 so we removed anything else from the json objects.
     \item Remove all the titles that are not written in english.
     \item All English stopwords have been removed.
-    \item The list of titles has become a list of words
+    \item The list of titles has become a list of words without duplicates.
     \item That list is converted to a dictionary [key, value] containing the
         word and the frequency of appearance.
     \item The dictionary is sorted in descending order.
 \end{enumerate}
 
+Then we store the output in a file called \textbf{popOutput.txt}.
 
+The keywords used for the Publish or Perish search were: "self-injuring
+behavior", "suicidal comorbidity", "suicide comorbidity", "suicidal
+comorbidites", "suicide comorbidities" and "suicidal ideation".
 
+\subsection{Expanding the first Elastic query}
 
+After retrieving the main subreddits that have information about suicide. We
+perform a query in order to get the 20000 most frequent words by using GND in
+each subreddit. As by default elastic dont allow to get more than 1000 results
+at once, is necessary to set a bigger limit using cerebro:
+
+\begin{verbatim}
+PUT \_cluster/settings
+{
+    "persistent":{
+        "search.max\_buckets":20000
+    }
+}
+\end{verbatim}
+
+Then we compare these words with the ones in \textbf{popOutput.txt}. If it
+exists in that file, its added to the result and stored in a file
+\textbf{result.txt}
+
+\subsection{Understanding the results}
+
+This process give us some false positive results, but most of them are pretty
+accurate. Some examples of comorbidites contained in the result file are:
+
+\begin{multicols}{3}
+    \begin{itemize}
+    \item Schizophrenia
+    \item Cancer
+    \item drug
+    \item lupus
+    \item scitalopram
+    \item winter
+    \item lesbian
+    \item pain
+    \item old
+    \item stress
+    \item work
+    \item school
+    \item alcohol
+    \item eczema
+    \item health
+    \item pregnant
+\end{itemize}
+\end{multicols}
 \end{document}
